# malwar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker.yml
data/: clawhub-scan-2026-04.json
docs/: ci-integration.md
docs/blog/: clawhavoc-12-percent.md  reddit-drafts.md  show-hn-draft.md
docs/deployment/: kubernetes.md
docs/getting-started/: Malwar_for_Claude.md
src/malwar/cli/commands/: crawl.py
src/malwar/crawl/: models.py
templates/azure/: README.md
templates/gitlab/: .gitlab-ci.yml  README.md
tests/unit/crawl/: test_crawl_command.py
