[project]
name = "malwar"
version = "0.3.1"
description = "Malware detection engine for agentic skills (SKILL.md)"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Veritas Aequitas Holdings LLC"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer[all]>=0.15.0",
    "httpx>=0.28.0",
    "anthropic>=0.45.0",
    "aiosqlite>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "rich>=13.9.0",
    "aiofiles>=24.1.0",
    "python-frontmatter>=1.1.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
cache = [
    "redis[hiredis]>=5.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-PyYAML>=6.0.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
]

[project.scripts]
malwar = "malwar.cli.app:app"

[project.urls]
Homepage = "https://github.com/Ap6pack/malwar"
Documentation = "https://ap6pack.github.io/malwar"
Repository = "https://github.com/Ap6pack/malwar"
Issues = "https://github.com/Ap6pack/malwar/issues"
Changelog = "https://github.com/Ap6pack/malwar/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malwar"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "S", "A",
    "C4", "DTZ", "T20", "SIM", "TCH", "RUF", "ASYNC",
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "S101",     # assert usage (fine in tests)
    "S108",     # hardcoded temp paths (fine in tests)
    "S110",     # try-except-pass (acceptable in best-effort extraction)
    "TC001",    # move app imports into TYPE_CHECKING — runtime imports fine for our scale
    "TC002",    # move third-party imports into TYPE_CHECKING
    "TC003",    # move stdlib imports into TYPE_CHECKING
    "RUF012",   # mutable class attrs — compiled regexes on rule classes are intentional
    "ASYNC240", # pathlib in async — our CLI entrypoint uses asyncio.run, sync Path is fine
    "B027",     # empty methods on ABC without abstract — intentional optional hooks
    "N815",     # mixedCase — required by SARIF 2.1.0 JSON schema
    "UP047",    # generic function type params — Python 3.12+ syntax, keeping TypeVar for compat
]

[tool.ruff.lint.isort]
known-first-party = ["malwar"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["frontmatter", "frontmatter.*", "aiofiles", "aiofiles.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests that are slow",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["malwar"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
